--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>MyBlog</title>
+  <title>Vitaleks-Blog</title>
   <link href="/bootstrap.css" rel="stylesheet">
   <%= stylesheet_link_tag  "application" %>
   <%= javascript_include_tag "application", "rails.validations", "rails.validations.custom" %>
