--- a/app/views/page/help.html.erb
+++ b/app/views/page/help.html.erb
@@ -11,7 +11,7 @@
       <li>Оставлять комментарии</li>
       <li>Оставлять анонимные вопросы</li>
       <li>Оценивать статьи и комментарии</li>
-      <li>Надписи мне письмо</li>
+      <li>Написать мне письмо</li>
       <li>И многое другое</li>
     </ul>
     <p> 2. После регистрации и входа на сайт у вас появляется ваш "Мини профиль" где вы можете просмотреть свою страницу кликнув кнопку "Профиль", а также изменить и добавить больше информации о себе кликнув "Настройки".</p>
