--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -10,27 +10,27 @@
 
     <br/>
     <div class="field">
-      <div class="too"><%=  image_tag ("question-mark.jpg"), size: '13x13', rel: "tooltip", title: "Ваше имя должно иметь не больше 15 символов." %></div><%= f.text_field :name %>
+      <div class="too"><%=  image_tag ("question-mark.jpg"), :size => '13x13', :rel => "tooltip", :title =>  "Ваше имя должно иметь не больше 15 символов." %></div><%= f.text_field :name %>
     </div>
 
 
       <%= f.label :email, "Електронная почта:" %>
     <br/>
       <div class="field">
-      <div class="too"><%=  image_tag ("question-mark.jpg"), size: '13x13', rel: "tooltip", title: "В ето поле вы должны ввести свой email адрес." %></div>  <%= f.text_field :email %>
+      <div class="too"><%=  image_tag ("question-mark.jpg"), :size => '13x13', :rel => "tooltip", :title =>  "В ето поле вы должны ввести свой email адрес." %></div>  <%= f.text_field :email %>
     </div>
 
       <%= f.label :password, "Пароль:" %>
     <br/>
     <div class="field">
-      <div class="too"><%=  image_tag ("question-mark.jpg"), size: '13x13', rel: "tooltip", title: "Ваш пароль должен составлять не меньее 6 символов." %></div>  <%= f.password_field :password %>
+      <div class="too"><%=  image_tag ("question-mark.jpg"), :size => '13x13', :rel => "tooltip", :title => "Ваш пароль должен составлять не меньее 6 символов." %></div>  <%= f.password_field :password %>
     </div>
 
 
       <%= f.label :password_confirmation, "Подтвердите пароль:" %>
     <br/>
     <div class="field">
-      <div class="too"><%=  image_tag ("question-mark.jpg"), size: '13x13', rel: "tooltip", title: "В ето поле вы должны ввести свой пароль ещо раз." %></div>  <%= f.password_field :password_confirmation %>
+      <div class="too"><%=  image_tag ("question-mark.jpg"), :size => '13x13', :rel => "tooltip", :title => "В ето поле вы должны ввести свой пароль ещо раз." %></div>  <%= f.password_field :password_confirmation %>
     </div>
     <p>
       <%= f.label :image, "Загрузить фото:" %>
@@ -61,7 +61,7 @@
     </div>
     <div class="field">
       <%= f.label :about, "About me:" %>
-      <%= f.text_area :about, rows: 6 %>
+      <%= f.text_area :about, :rows => 6 %>
     </div>
      <% end %>
 
