--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -1,4 +1,14 @@
 
 
 <%= render :partial => 'posts' %>
+<center><div class="pagination">
+  <ul>
+    <li><a href="?page=1">Начало</a></li>
+    <li><a href="?page=2">2</a></li>
+    <li><a href="?page=3">3</a></li>
+    <li><a href="?page=4">4</a></li>
+    <li><a href="?page=5">5</a></li>
+    <li><a href="?page=6">Конец</a></li>
+  </ul>
+</div> </center>
 <%= javascript_include_tag  "application" %>
