--- a/app/views/admin/admin.html.erb
+++ b/app/views/admin/admin.html.erb
@@ -3,10 +3,10 @@
 
 <div class="admin">
   <ul class="nav nav-pills">
-    <li><%= link_to 'Добавить посты', new_post_path %></li>
-    <li> <%= link_to 'Пользователи', users_path %></li>
-    <li> <%= link_to 'Мои вопросы', questions_path %></li>
-    <li>  <%= link_to 'Письма', letters_path %></li>
+    <li><%= link_to t('.new_post'), new_post_path %></li>
+    <li> <%= link_to t('.users'), users_path %></li>
+    <li> <%= link_to t('.my_questions'), questions_path %></li>
+    <li>  <%= link_to t('.my_letters'), letters_path %></li>
   </ul>
 </div>
   <br/>
