--- a/app/views/galleries/_form.html.erb
+++ b/app/views/galleries/_form.html.erb
@@ -1,12 +1,13 @@
 <%= form_for @gallery, :html => { :class => 'form-horizontal' } do |f| %>
-    <div class="control-group">
-      <%= f.label :name %>
+    <div class="field">
+
+      <%= f.label :name,  t('.name') %>
 
         <%= f.text_field :name %>
 
-    </div>
-    <div class="control-group">
-      <%= f.label :description %>
+
+
+      <%= f.label :description,  t('.description') %>
 
         <%= f.text_field :description%>
 
