--- a/app/views/layouts/_mini_profile.html.erb
+++ b/app/views/layouts/_mini_profile.html.erb
@@ -3,11 +3,11 @@
 
     <div class="heid_mini_prof">
       <div class="date_mini_prof">
-        <p class="muted"> ► На сайте c: <%= time_tag(@user.created_at) %> </p>
+        <p class="muted"> ► <%= t('.site') %> <%= time_tag(@user.created_at) %> </p>
       </div>
     </div>
     <div class="mini_profile">
-      <p class="muted">Привет,</p>
+      <p class="muted"><%= t('.hello') %>,</p>
       <div class="name_mini_profile">
         <p class="text-error"><%=@user.name %></p>
       </div>
@@ -15,9 +15,9 @@
 
       <div class="navigate_mini_prof">
         <ul class="nav nav-pills">
-          <li><%= link_to "Профиль", current_user, :rel=>"tooltip", :title=>"Ваш профиль" %></li>
-          <li> <%= link_to "Настройки", edit_user_path(current_user), :rel=>"tooltip", :title=>"Настройки профиля" %></li>
-          <li><%= link_to "Вийти", signout_path, :rel=>"tooltip", :title=>"Покинуть сайт", :method => :delete %></li>
+          <li><%= link_to t('.my_profile'), current_user, :rel=>"tooltip", :title=>"Ваш профиль" %></li>
+          <li> <%= link_to t('.settings'), edit_user_path(current_user), :rel=>"tooltip", :title=>"Настройки профиля" %></li>
+          <li><%= link_to t('.logout'), signout_path, :rel=>"tooltip", :title=>"Покинуть сайт", :method => :delete %></li>
         </ul>
       </div>
 
