--- a/app/views/pictures/_form.html.erb
+++ b/app/views/pictures/_form.html.erb
@@ -1,11 +1,14 @@
 <%= form_for [@gallery, @picture], :html => { :class => 'form-horizontal' } do |f| %>
-    <div class="control-group">
-      <%= f.label :description %>
+    <div class="field">
+
+      <%= f.label :description, "Описание фото:" %>
 
         <%= f.text_field :description %>
-    </div>
 
-    <%= image_tag @picture.image.large.url, :id => 'cropbox' %>
+      <div class="pictures_edit">
+    <%= image_tag @picture.image.url, :size => '550x550'  %>
+    </div>
+      </div>
 
     <% %w[x y w h].each do |attribute| %>
         <%= f.hidden_field "crop_#{attribute}" %>
