--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,12 +1,12 @@
-<center><h4>Регистрация</h4></center>
+<center><h4><%= t'.title' %></h4></center>
 <hr/>
 <div class ="reg_user">
-<p class="text-error"> ► Все поля обязательны к заполнению!</p>
+<p class="text-error"> ► <%=t('.info')%></p>
 
 <%= form_for (@user), :validate => true do |f| %>
 
 
-      <%= f.label :name, "Имя:" %>
+      <%= f.label :name,  t('.name') %>
 
     <br/>
     <div class="field">
@@ -14,32 +14,32 @@
     </div>
 
 
-      <%= f.label :email, "Електронная почта:" %>
+      <%= f.label :email, t('.email') %>
     <br/>
       <div class="field">
       <div class="too"><%=  image_tag ("question-mark.jpg"), :size => '13x13', :rel => "tooltip", :title =>  "В ето поле вы должны ввести свой email адрес." %></div>  <%= f.text_field :email %>
     </div>
 
-      <%= f.label :password, "Пароль:" %>
+      <%= f.label :password, t('.password') %>
     <br/>
     <div class="field">
       <div class="too"><%=  image_tag ("question-mark.jpg"), :size => '13x13', :rel => "tooltip", :title => "Ваш пароль должен составлять не меньее 6 символов." %></div>  <%= f.password_field :password %>
     </div>
 
 
-      <%= f.label :password_confirmation, "Подтвердите пароль:" %>
+      <%= f.label :password_confirmation, t('.password_confirmation') %>
     <br/>
     <div class="field">
       <div class="too"><%=  image_tag ("question-mark.jpg"), :size => '13x13', :rel => "tooltip", :title => "В ето поле вы должны ввести свой пароль ещо раз." %></div>  <%= f.password_field :password_confirmation %>
     </div>
     <p>
-      <%= f.label :image, "Загрузить фото:" %>
+      <%= f.label :image, t('.image') %>
       <%= f.file_field :image %>
     </p>
     <% if signed_in? %>
     <label>
       <%= f.check_box :remove_image %>
-      Remove image
+      <%= t('.remove_image') %>
     </label>
 
 
@@ -48,25 +48,25 @@
       <%= f.text_field :skype %>
     </div>
     <div class="field">
-      <%= f.label :phone, "Phone:" %>
+      <%= f.label :phone, t('.phone') %>
       <%= f.text_field :phone %>
     </div>
     <div class="field">
-      <%= f.label :date_of_birth, "Your Birthday:" %>
+      <%= f.label :date_of_birth, t('.date_of_birth') %>
       <%= f.text_field :date_of_birth %>
     </div>
     <div class="field">
-      <%= f.label :town, "Town:" %>
+      <%= f.label :town, t('.town') %>
       <%= f.text_field :town %>
     </div>
     <div class="field">
-      <%= f.label :about, "About me:" %>
+      <%= f.label :about, t('.about') %>
       <%= f.text_area :about, :rows => 6 %>
     </div>
      <% end %>
 
     <div class="actions">
-      <%= f.submit "Создать профиль"%>
+      <%= f.submit t('.create')%>
     </div>
 
 
