--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,10 @@
 
 <div class="heid_user">
   <div class="name_user_page">
- <p class="muted">Profile, <%=@user.name %></p>
+ <p class="muted"><%= t('.profile') %>, <%=@user.name %></p>
   </div>
   <div class="date_user_page">
-  <p class="muted">Создан: <%= time_tag(@user.created_at) %></p>
+  <p class="muted"><%= t('.create') %> <%= time_tag(@user.created_at) %></p>
   </div>
 </div>
 
@@ -17,7 +17,7 @@
 
 
  <dl>
-    <dt><p class="text-error">Електронная почта:</p></dt>
+    <dt><p class="text-error"> <%=t('.email')%></p></dt>
     <dd><p class="muted"> <%= @user.email %></p></dd>
   </dl>
   <dl>
@@ -25,19 +25,19 @@
     <dd><p class="muted"> <%= @user.skype %></p> </dd>
   </dl>
   <dl>
-    <dt><p class="text-error">Номер телефона:</p></dt>
+    <dt><p class="text-error"><%=t('.phone')%></p></dt>
     <dd><p class="muted"> <%= @user.phone %></p></dd>
   </dl>
   <dl>
-    <dt><p class="text-error">Дата рождения:</p></dt>
+    <dt><p class="text-error"><%=t('.date_of_birth')%></p></dt>
     <dd><p class="muted"> <%= @user.date_of_birth %></p> </dd>
   </dl>
   <dl>
-    <dt><p class="text-error">Город:</p></dt>
+    <dt><p class="text-error"><%=t('.town')%></p></dt>
     <dd><p class="muted"><%= @user.town %></p> </dd>
   </dl>
   <dl>
-    <dt><p class="text-error">Коротко о себе:</p></dt>
+    <dt><p class="text-error"><%=t('.about')%></p></dt>
     <dd><p class="muted"><%= @user.about %> </p> </dd>
   </dl>
 
