--- a/app/views/layouts/_signin.html.erb
+++ b/app/views/layouts/_signin.html.erb
@@ -29,7 +29,7 @@
 
 <% end %>
   <div class="button_mini_profile">
-    <a class="btn btn-small" href="/signup" >  <%= t('.signup')%> </a>
+   <%= link_to t('.signup'), new_user_path, :class => 'btn btn-small'%>
   </div>
 
 </div>
