--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,4 +1,4 @@
-<p class="text-error">► Введите ваш анонимний вопрос.</p>
+<p class="text-error">► <%= t('.title')%></p>
 <br/>
 
 <%= render 'form' %>
