--- a/app/views/service/_local.html.erb
+++ b/app/views/service/_local.html.erb
@@ -1,5 +1,5 @@
 
- <div class="heid_local"><div class="info_local"><p class="muted">► Я в интернете:</p></div></div>
+ <div class="heid_local"><div class="info_local"><p class="muted">► <%=t('.socil')%>:</p></div></div>
 
 
  <div class="socil">
