--- a/app/views/page/_posts.html.erb
+++ b/app/views/page/_posts.html.erb
@@ -1,5 +1,5 @@
 <div class="counter_posts">
-  <p class="muted">Количество записей: <%= pluralize @posts.count, "" %> </p>
+  <p class="muted"><%=t('page.posts')%>: <%= pluralize @posts.count, "" %> </p>
 
 </div>
 <% @posts.each do |post| %>
@@ -7,7 +7,7 @@
 
     <div class="blocke">
 
-      <p class="muted"> <small><i class="icon-time"></i> Добавлено: <%= (post.created_at.strftime('%F, %H:%M ')) %> </small> </p>
+      <p class="muted"> <small><i class="icon-time"></i> <%= t('page.add') %>: <%= (post.created_at.strftime('%F, %H:%M ')) %> </small> </p>
 
       <strong><%= post.title%></strong>
 
@@ -24,7 +24,7 @@
       </div>
 
         <div class="link">
-     <p><%=  link_to "Читать дальше...", post %> </p>
+     <p><%=  link_to t('page.read'), post %> </p>
         </div>
        <hr/>
 
