--- a/app/views/admin/admin.html.erb
+++ b/app/views/admin/admin.html.erb
@@ -3,10 +3,11 @@
 
 <div class="admin">
   <ul class="nav nav-pills">
-    <li><%= link_to t('.new_post'), new_post_path %></li>
-    <li> <%= link_to t('.users'), users_path %></li>
-    <li> <%= link_to t('.my_questions'), questions_path %></li>
-    <li>  <%= link_to t('.my_letters'), letters_path %></li>
+
+    <li> <%= link_to t('.new_post'), new_post_path,  :title => "Записей: #{@total_posts}" %></li>
+    <li><%= link_to t('.users'), users_path, :title => "Пользователей: #{@total_users}" %></li>
+    <li> <%= link_to t('.my_questions'), questions_path, :title => "Вопросов: #{@total_questions}" %></li>
+    <li>  <%= link_to t('.my_letters'), letters_path, :title => "Писем: #{@total_letters}" %></li>
   </ul>
 </div>
   <br/>
