--- a/app/views/page/_posts.html.erb
+++ b/app/views/page/_posts.html.erb
@@ -4,7 +4,8 @@
 </div>
 <% @posts.each do |post| %>
 
-
+  <table class="table table-hover">
+    <td>
     <div class="blocke">
 
       <p class="muted"> <small><i class="icon-time"></i> <%= t('page.add') %>: <%= (post.created_at.strftime('%F, %H:%M ')) %> </small> </p>
@@ -26,9 +27,11 @@
         <div class="link">
      <p><%=  link_to t('page.read'), post %> </p>
         </div>
-       <hr/>
+
 
 
     </div>
+    </td>
+  </table>
 
 <% end %>
