--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,602 +1,79 @@
 /*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the top of the
- * compiled file, but it's generally better to create a new file per style scope.
- *
+
  *= require_self
  *= require_tree .
 */
-/* background */
-.span12 {
-    width: 940px;
-    border-radius: 10px;
 
-
-}
-
-.span11 {
-    width: 860px;
-
-}
-
-.span10 {
-    width: 780px;
-}
-
-.span9 {
-    width: 700px;
-}
-
-.span8 {
-    width: 620px;
-    background: rgba(245, 231, 240, 0.18);
-    border-radius: 10px;
-
-}
-
-.span7 {
-    width: 540px;
-}
-
-.span6 {
-    width: 460px;
-}
-
-.span5 {
-    width: 380px;
-}
-
-.span4 {
-    width: 300px;
-    background: rgba(245, 231, 240, 0.18);
-    border-radius: 10px;
-
-
-}
-
-.span3 {
-    width: 220px;
-}
-
-.span2 {
-    width: 140px;
-}
-
-.span1 {
-    width: 60px;
-}
-body {
-
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-
-}
-
-
-.containers{
-    width: 880px;
-    margin-left: 225px;
-    border-radius: 10px;
-    margin-top: -40px;
-
-
-}
-/* links */
-
-header nav {
-    float: none;
-}
-nav {
-    float: right;
-}
-a {
-    color: rgba(157, 0, 0, 0.45);
-
-}
-
-a:hover {
-    color: rgba(153, 13, 8, 0.54);
-
-}
-
-a:visited {
-    color: rgba(153, 18, 11, 0.53);
-}
-/* Navigation */
-.language{
-    margin-left: 400px;
-    margin-top: -16px;
-}
-nav {
-    float: right;
-}
-
-nav {
-    background-color: white;
-    padding: 0 0.7em;
-    white-space: nowrap;
-}
-
-nav ul {
-    margin: 0;
-    padding: 0;
-}
-
-nav ul li {
-    list-style-type: none;
-    display: inline-block;
-    padding: 0.2em 0;
-}
-
-nav ul li a {
-    padding: 0 5px;
-    font-weight: bold;
-}
-
-nav ul li a:visited {
-    color: #cc0911;
-}
-
-nav ul li a:hover {
-
-}
-/* Validate */
-.field_with_errors {
-    display: inline;
-}
-
-.field_with_errors .message {
-    color: #D00;
-    padding-left: 5px;
-    font-size: 12px;
-}
-
-/* Users */
-.edit_profile{
-    margin-left: 7px;
-
-}
-ul.users {
-    margin-top: 1em;
-}
-
-.users li {
-    list-style: none;
-}
-.image_user{
-    display: block;
-    overflow: hidden;
-    max-width: 120px;
-    max-height: 120px;
-    border-radius: 5px;
-    margin-left: 8px;
-    margin-top: 10px;
-}
-.image_user_all{
-    width: 70px;
-    height: 70px;
-}
-.info_user_page{
-    margin-left:10px;
-    margin-top: 15px;
-}
-.infos_user{
-    margin-left: 140px;
-    margin-top: -134px;
-
-}
-.heid_user{
-    width: 578px;
-    height: 20px;
-    background: rgba(216, 212, 212, 0.29);
-    border-radius: 1px;
-    margin-top: -18px;
-
-}
-.name_user_page{
-    margin-left: 5px;
-}
-.date_user_page{
-    margin-left: 380px;
-    margin-top: -26px;
-}
-
-/* Post */
-.image_post{
-    width: 250px;
-    height: 200px;
-    margin-left: 10px;
-}
-.counter_posts{
-    margin-left: 424px;
-    margin-top: -15px;
-}
-.counter_comments{
-    margin-left: 485px;
-}
-.paginate{
-    margin-right: 240px ;
-}
-
-/* mini_profile */
-.name_mini_profile{
-    margin-left: 48px;
-    margin-top: -26px;
-}
-.info_user_mini{
-    margin-left: 84px;
-    margin-top: -70px;
-}
-
-.image_mini_profile{
-    display: block;
-    overflow: hidden;
-    max-width: 70px;
-    max-height: 70px;
-    border-radius: 5px;
-
-}
-.mini_profile {
-    width: 245px;
-    height: 160px;
-    border-radius: 7px;
-
-    margin-top: 20px;
-    margin-left: 10px;
-
-}
-.heid_mini_prof{
-    width: 277px;
-    height: 20px;
-    background: rgba(216, 212, 212, 0.29);
-    border-radius: 6px;
-}
-.date_mini_prof{
-    margin-left: 4px;
-}
-.navigate_mini_prof{
-    margin-left: 14px;
-}
-.statistic_nav{
-    margin-left: 1px;
-    margin-top: 5px;
-}
-.statistic{
-    margin-left: 77px;
-    margin-top: -71px;
-}
-/* Buttons mini_profile */
-.button_mini_profile {
-   margin-top: -46px;
-    margin-left: 54px;
-
-}
-.button_signin{
-    width: 268;
-    height: 70;
-    margin-left: 65px;
-}
-/* Comment */
-.heid_comment_post{
-    width: 578px;
-    height: 20px;
-    background: rgba(216, 212, 212, 0.29);
-    border-radius: 1px;
-
-}
-.container_comment{
-    width: 578px;
-    height: 100px;
-    border-radius: 5px;
-    background: rgba(104, 0, 0, 0.10);
-}
-.heid_comment{
-    margin-left: 50px;
-    width: 527px;
-    height: 20px;
-    background: rgba(106, 0, 0, 0.10);
-    border-radius: 5px;
-
-
-}
-.image_comment {
-    display: block;
-    overflow: hidden;
-    max-width: 50px;
-    max-height: 57px;
-    margin-top: -20px;
-    margin-left: 1px;
-    border-radius: 3px;
-
-}
-.counter_post_comments{
-    margin-top: -25px;
-    margin-left: 445px;
-}
-.container_likes{
-margin-left: 505px;
-    margin-top: -5px;
-
-}
-.container_delete{
-    margin-top: -27px;
-    margin-left: 510px;
-}
-
-.name{
-    margin-left: 8px;
-
-}
-.content{
-    margin-left: 60px;
-    margin-top: -20px;
-
-}
-.date{
-    margin-left: 331px;
-    margin-top: -25px;
-}
-.form_comment{
-    margin-left: 7px;
-}
-/* post text */
-.title{
-    margin-left: 7px;
-}
-.text{
-    margin-top: 55px;
-    margin-left:7px;
-    text-align:  left;
-
-}
-.heid_post{
-    width: 578px;
-    height: 20px;
-    background: rgba(216, 212, 212, 0.29);
-    border-radius: 1px;
-    margin-top: -19px;
-}
-.time_tag{
-    margin-left: 5px ;
-}
-/* Photo gallery */
-.pictures_edit{
-    margin-left: 12px;
-    margin-top: 7px;
-
-}
-.container_photo_gallery{
-    margin-left: 1px;
-
-}
-.button_gallery{
-    margin-left: 10px;
-}
-/* share */
-.like{
-    margin-left: 7px;
-}
-.share{
-    margin-left: 480px;
-    margin-top: -33px;
-}
-/* like */
-.likes{
-    margin-left: 440px;
-    margin-top: -25px;
-
-}
-/* Questions */
-.conteiner_ask{
-    margin-left: 7px;
-}
-.delete{
-    margin-left: 500px;
-
-}
-.answers_page{
-    margin-left: 7px;
-}
-.time_questions{
-    margin-top: -17px;
-}
-/* Search */
-.search{
-    margin-top: 10px;
-    margin-left: 275px;
-}
-.button{
-    margin-top: -45px;
-    margin-left: 225px;
-}
-/* footer */
-.footer{
-  width: 300px;
-  height: 120px;
-}
-/* Socil network */
-.socil{
-    margin-left: 88px;
-    margin-top: 10px;
-}
-.heid_local{
-    width: 277px;
-    height: 20px;
-    background: rgba(216, 212, 212, 0.29);
-    border-radius: 6px;
-
-}
-.info_local{
-    margin-left: 4px;
-}
-.button_local{
-    margin-top: -29px;
-    margin-left: 3px;
-
-}
-/* Sorting button*/
-.sort{
-    margin-top: -41px;
-    margin-left: 3px;
-}
-/* gallery */
-.gallery{
-    margin-left: 35px;
-}
-/* navbar */
-.pagination li {
-    display: inline;
-}
-
-.pagination a,
-.pagination span {
-    float: left;
-    padding: 0 14px;
-    line-height: 38px;
-    text-decoration: none;
-    background-color: rgba(131, 7, 12, 0.45);
-    border: 1px solid #dddddd;
-    border-left-width: 0;
-}
-
-.pagination a:hover,
-.pagination .active a,
-.pagination .active span {
-    background-color: #f51614;
-}
-
-.pagination .active a,
-.pagination .active span {
-    color: #990507;
-    cursor: default;
-}
-
-.pagination .disabled span,
-.pagination .disabled a,
-.pagination .disabled a:hover {
-    color: #990608;
-    cursor: default;
-    background-color: transparent;
-}
-
-.pagination li:first-child a,
-.pagination li:first-child span {
-    border-left-width: 1px;
-    -webkit-border-radius: 3px 0 0 3px;
-    -moz-border-radius: 3px 0 0 3px;
-    border-radius: 3px 0 0 3px;
-}
-
-.pagination li:last-child a,
-.pagination li:last-child span {
-    -webkit-border-radius: 0 1px 1px 0;
-    -moz-border-radius: 0 1px 1px 0;
-    border-radius: 0 1px 1px 0;
-}
-
-.pagination-centered {
+/* window sign in*/
+.cleaner { clear: both }
+.float_left { float: left }
+.float_right { float: right }
+.center { text-align: center;}
+.block {display: block;}
+.invisible {display: none;}
+
+/*flash messages*/
+.flash_box {
+    position: fixed;
+    top: 0;
+    left: 33%;
+    width: 34%;
+    z-index: 500;
+}
+.flash_box .flash {
+    padding: 5px;
+    color: white;
     text-align: center;
 }
+.flash_box .flash span {
+    float: left;
+    cursor: pointer;
+    font-weight: bolder;
+    font-size: 0.8em;
+    padding-top: 0.1em;
+    height: 1.5em;
+    width: 1.6em;
+    color: #e8e8e8;
+}
+.flash_box .flash.success {
+    background-color: rgba(81, 163, 81, 0.8);
+}
+.flash_box .flash.success span {
+    background-color: #51a351;
+}
+.flash_box .flash.error {
+    background-color: rgba(189, 54, 47, 0.8);
+}
+.flash_box .flash.error span {
+    background-color: rgba(132, 51, 48, 0.8);
+}
+.flash_box .flash.notice {
+    background-color: #006699;
+}
+.flash_box .flash.notice span {
+    background-color: #006699;
+}
 
-.pagination-right {
-    text-align: right;
-}
-.error_sign_in{
-    margin-left: 20px;
-}
-/* tooltip */
-.too{
-    margin-left: 215px;
-   margin-top: -28px;
-}
-/*post_page*/
-.blocke {
 
-margin-left: 7px;
-}
 
-.link{
-    margin-top: -20px;
-}
-.link_delete{
-    margin-left: 495px;
-}
-/* miniadmin */
-.text_admin_sector{
-    margin-left: 5px;
-}
-.heid_admin_sector{
-    width: 277px;
-    height: 20px;
-    background: rgba(216, 212, 212, 0.29);
-    border-radius: 6px;
-}
-.info_admin_sector{
-margin-left: 5px;
 
-}
-.miniadmin_image{
-    display: block;
-    overflow: hidden;
-    max-width: 180px;
-    max-height: 210px;
-    margin-left: 123px;
-    border-radius: 1px;
-    margin-top: 55px;
 
-}
-.button_admin{
-    margin-left: 3px;
-    margin-top: -5px;
-}
-/* signin */
-.sign_in{
-margin-left: 15px;
-}
-.text_heid_sign_in{
-    margin-left: 5px;
-}
-.heid_sign_in{
-    width: 277px;
-    height: 20px;
-    background: rgba(216, 212, 212, 0.29);
-    border-radius: 6px;
-}
-.text_remember{
-    margin-left: 22px;
-    margin-top: -20px;
-}
-.reg_user{
-    margin-left: 7px;
-}
-/* letters */
-.letters{
-margin-left: 7px;
-}
-.index_letters{
-    margin-left: 7px;
-}
-.time_letters{
-    margin-left: 420px;
-}
-.letters_show{
-    margin-left: 7px;
-}
-/* admin */
-.admin{
-    margin-left: 86px;
-}
-.user_index{
-    margin-left: 7px;
-}
-.delete_user{
-    margin-left: 465px;
-    margin-top: -70px;
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
