--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,66 +4,21 @@
 <head>
   <meta charset="utf-8">
   <title>Vitaleks-Blog</title>
-  <link href="/bootstrap.css" rel="stylesheet">
+  <%= javascript_include_tag "application", "jquery-1.9.1.min.js" %>
   <%= stylesheet_link_tag  "application" %>
-  <%= javascript_include_tag "application", "rails.validations", "rails.validations.custom" %>
   <title><%= yield :title %></title>
-
   <%= csrf_meta_tags %>
 </head>
-
 <body>
+<%=  render "layouts/banned" %>
 
 
 <div class="containers">
-  <div class="row-fluid">
-    <div class="span12">
-      <div class="row-fluid">
-        <div class="span8">
-          <ul class="breadcrumb">
-            <%= render 'layouts/navigate' %>
 
-          <%= yield %>
-
-         </ul>
-        </div>
-        <div class="span4">
-
-          <% if signed_in? %>
-              <% @user = current_user %>
-              <%= render 'layouts/mini_profile' %>
-          <% else %>
-
-                <%=  render 'layouts/signin' %>
-              <div class="error_sign_in">
-                <p class="text-error">
-              <% flash.each do |key, value| %>
-                  <div class="error <%= key %>"><%= value %></div>
-              <% end %>
-                </p>
-              </div>
-          <% end %>
-
-          <%= render 'layouts/admin_sector' %>
-
-            <%=  render 'service/local' %>
-
-
-        </div>
-      </div>
-
-    </div>
-  </div>
 </div>
 
-<div id="fb-root"></div>
-<script>(function(d, s, id) {
-    var js, fjs = d.getElementsByTagName(s)[0];
-    if (d.getElementById(id)) return;
-    js = d.createElement(s); js.id = id;
-    js.src = "//connect.facebook.net/ru_RU/all.js#xfbml=1";
-    fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
+<div id="header">
+</div>
 
 </body>
 </html>
