--- a/app/views/layouts/_banned.html.erb
+++ b/app/views/layouts/_banned.html.erb
@@ -1,38 +1,22 @@
 <div id="banned">
-  <%=link_to 'Home', page_path,  :class=>"super_links"%>
-  <%=link_to 'Questions', questions_path,  :class=>"super_links"%>
-  <%=link_to 'About', "/about",  :class=>"super_links"%>
-  <%=link_to 'Help', "/help",  :class=>"super_links"%>
-  <% if signed_in? and current_user.admin? %>
-      <%=link_to 'Admin', "/admin",  :class=>"super_links"%>
-  <% end %>
-  <% if signed_in? %>
-      <% @user = current_user %>
-      <%= link_to "Logout", signout_path, :method => :delete, :class=>"super_links", :id => "user_link" %>
-      <%= link_to 'Settings', edit_user_path(current_user), :class=>"super_links", :id => "user_link" %>
-      <%= link_to 'Profile', current_user, :class=>"super_links", :id => "user_link" %>
-  <% else %>
-      <%= link_to 'Sign up', signup_path, :class=>"super_links", :id => "user_link" %>
-      <a href="#signin" name="modal" id="user_link" class="super_links">Sign in</a>
-      <div id="boxes">
-        <div id="signin" class="window">
-          <div class="float_right">
-            <a href="#"class="close" class="super_links"/>X</a>
-          </div>
-
-          <%= form_for(:session, :url => sessions_path) do |f| %>
-              <%= f.label :email %>
-              <%= f.text_field :email %> <br/>
-              <%= f.label :password %>
-              <%= f.password_field :password %> <br/>
-             Remember me: <%= f.check_box :remember_me %> <br/>
-
-              <%= f.submit  "Sign in" %>
-
-          <% end %>
-        </div>
-      </div>
+  <div class="ph-line-nav nav">
+    <%=link_to 'Home', page_path,  :class=>"super_links"%>
+    <%=link_to 'About', "/about",  :class=>"super_links"%>
+    <%=link_to 'Help', "/help",  :class=>"super_links"%>
+    <% if signed_in? and current_user.admin? %>
+        <%=link_to 'Admin', "/admin",  :class=>"super_links"%>
+    <% end %>
 
 
-  <% end %>
+    <% if signed_in? %>
+        <% @user = current_user %>
+        <%= link_to "Logout", signout_path, :method => :delete, :class=>"super_links", :id => "user_link" %>
+        <%= link_to 'Settings', edit_user_path(current_user), :class=>"super_links", :id => "user_link" %>
+        <%= link_to 'Profile', current_user, :class=>"super_links", :id => "user_link" %>
+    <% else %>
+        <%= render 'layouts/signin' %>
+    <% end %>
+    <div class="effect"></div>
+  </div>
+
 </div>
