--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -4,7 +4,7 @@
     width:99%;
     background:url("bd.png")  repeat-x 0 0;
     position:relative;
-    height: 65px;
+    height: 50px;
     margin-top: 3px;
     margin-left: 7px;
     border-radius: 3px;
@@ -13,7 +13,7 @@
     width: 99%;
     background:url("bd2.png") repeat;
     position:relative;
-    height: 75%;
+    height: 82%;
     margin-left: 7px;
     margin-top: 1px;
 
@@ -21,7 +21,7 @@
 #header{
     width:99%;
     background:url("bd.png") repeat-x 0 0;
-    height:100px;
+    height:75px;
     margin-top: -7px;
     margin-left: 7px;
     border-radius: 3px;
@@ -36,10 +36,26 @@ body {
     background: white;
     margin: 0;
 }
+#left_cont{
+    width: 30%;
+    height: 99.5%;
+    background:url('background.png') repeat;
+    opacity: 0.1;
+    margin-left: 1px;
+    border-radius: 4px;
+    border: solid 2px;
+    -webkit-box-shadow:  0px 0px 13px 0px rgb(0,0,0);
+    -moz-box-shadow:  0px 0px 13px 0px rgb(0,0,0);
+    box-shadow:  0px 0px 13px 0px rgb(0,0,0);
+    filter: progid:DXImageTransform.Microsoft.dropshadow(offX=0, offY=0, color=#000000);
+}
+
+
+
 .super_links{
     color: #dbdbdb;
     font-family: "Tahoma" arial, serif;
-    font-size: 1em;
+    font-size: 0.8em;
     line-height:3em;
     font-weight:bold;
     text-shadow:#fff 0px 1px 0, #000 0 -1px 0;
@@ -49,7 +65,7 @@ body {
 .super_links:hover{
     color: #979797;
     font-family: "Tahoma" arial, serif;
-    font-size: 1em;
+    font-size: 0.8em;
     line-height:3em;
     font-weight:bold;
     text-shadow:#fff 0px 1px 0, #000 0 -1px 0;
@@ -80,3 +96,53 @@ a:hover{
     text-shadow:#fff 0px 1px 0, #000 0 -1px 0;
     text-decoration: none;
 }
+
+nav {
+    overflow: hidden;
+    position: relative;
+    width: 480px; }
+.nav a {
+    display: block;
+    position: relative;
+    float: left;
+    width: 5.1%;
+    text-decoration: none;
+    color: #dbdbdb;
+    transition: 1.7s; }
+.nav a:hover {
+    color: #979797;
+}
+
+.effect {
+    position: absolute;
+    left: 10%;
+    -webkit-transition: 0.8s ease-in-out; }
+.nav .super_links:nth-child(1):hover ~ .effect {
+    left: 1.2%;}
+.nav .super_links:nth-child(2):hover ~ .effect {
+    left: 8.4%; }
+.nav .super_links:nth-child(3):hover ~ .effect {
+    left: 14.8%;}
+.nav .super_links:nth-child(4):hover ~ .effect {
+    left: 22.1%;}
+.nav .super_links:nth-child(5):hover ~ .effect {
+    left: 91.7%;}
+.nav .super_links:nth-child(6):hover ~ .effect {
+    left: 82%;}
+.nav .super_links:nth-child(7):hover ~ .effect {
+    left: 71.7%;}
+
+.ph-line-nav .effect {
+    width: 57px;
+    height: 2px;
+    bottom: 15px;
+    background: #d5d5d5;
+    border-radius: 5px;
+    filter: progid:DXImageTransform.Microsoft.dropshadow(offX=0, offY=0, color= #e0e0e0);
+}
+
+
+
+
+
+
